<resources>
    <string name="app_name">MobileAssignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //GENERAL
    //Welcome
    <string name="welcome">Welcome</string>
    <string name="title">Fresh Safari</string>
    <string name="logo">Logo</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="slogan">-Eat Fresh, Feel Fresh-</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>

    //Homepage
    <string name="account">Account</string>
    <string name="list">List</string>
    <string name="productList">Product List</string>
    <string name="requestList">Customer Request List</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="welcomeBack">Welcome Back</string>

    //Login/Register Label
    <string name="loginLbl">Login</string>
    <string name="registerLbl">Register</string>
    //Login
    <string name="loginPage">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    //Register
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="registerAddress">Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string-array name="role">
        <item>Please Select Role</item>
        <item>Farmer</item>
        <item>Client</item>
    </string-array>
    <string name="required">Required</string>

    //testing purpose
    <string name="thisIsProductList">This is a product list.</string>

    //FARMER
    //Farmer Homepage
    <string name="farmer_homepage">Farmer Homepage</string>

    //Product Side Bar
    <string name="product">All Product</string>
    <string name="fruit">Fruits</string>
    <string name="vegetable">Vegetables</string>

    //Request List
    <string name="request_list">Request List</string>
    <string name="choose">Choose</string>

    //ContractDetail
    <string name="contractDetail">Contract Description</string>
    <string name="customerName">Customer Name:</string>
    <string name="quantityORweight">Quantity/Weight:</string>
    <string name="location">Location:</string>
    <string name="acceptRequest">Accept Request</string>

    //Customer Order List
    <string name="orderList">Customer Order List</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phoneNum">Phone Number:</string>
    <string name="status">Status:</string>
    <string name="arrived">Arrived</string>

    //Add New Request
    <string name="addNewRequest">Add Request</string>

    //Accepted Request List
    <string name="acceptedRequestList">Request List</string>
    //Name,PhoneNumber,Status string take from Customer Order List
    <string name="acceptedProduct">Product:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="title_activity_farmer">FarmerActivity</string>
    <string name="quantityTitleText">Quantity:</string>
    <string name="priceTitleView">Price (RM):</string>
    <string name="byGramText" />
    <string name="byGram">By Gram</string>
    <string name="confirmTextView">Confirm</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>

    //Profile
    <string name="back">Back</string>
    <string name="changDetail">Change Detail</string>
    <string name="guide1"># Left it blank will not update</string>
    <string name="adminPageTitle">Admin Page</string>
    <string name="adminProductPage">Product Name</string>
    <string name="uploadAdmin">Upload</string>
    <string name="dealer">Dealer:</string>
</resources>