<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_productList"
            android:icon="@drawable/ic_product_list"
            android:title="@string/productList" />

        <item
            android:id="@+id/nav_customerRequestList"
            android:icon="@drawable/ic_request_list"
            android:title="@string/requestList" />
    </group>

    <item
        android:enabled="false"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>