<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/record_divider">

    <TextView
        android:id="@+id/textAcceptedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAcceptedProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/acceptedProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAcceptedName" />

    <TextView
        android:id="@+id/textAcceptedPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/priceTitleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAcceptedProduct" />

    <TextView
        android:id="@+id/textAcceptedStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAcceptedQuantity" />

    <TextView
        android:id="@+id/textAcceptedQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantityORweight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAcceptedPhoneNum" />

    <TextView
        android:id="@+id/acceptedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="aaa"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedName"
        app:layout_constraintStart_toEndOf="@+id/textAcceptedName"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedName" />

    <TextView
        android:id="@+id/acceptedProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="carrot"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedProduct"
        app:layout_constraintStart_toEndOf="@+id/textAcceptedProduct"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedProduct" />

    <TextView
        android:id="@+id/acceptedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0123456789"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedPhoneNum"
        app:layout_constraintStart_toEndOf="@+id/textAcceptedPhoneNum"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedPhoneNum" />

    <TextView
        android:id="@+id/acceptedQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0123456789"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedQuantity"
        app:layout_constraintStart_toEndOf="@+id/textAcceptedQuantity"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedQuantity" />

    <TextView
        android:id="@+id/acceptedStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="pending"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedStatus"
        app:layout_constraintStart_toEndOf="@+id/textAcceptedStatus"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedStatus" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonDelete"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedName" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/textAcceptedStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textAcceptedPhoneNum" />

</androidx.constraintlayout.widget.ConstraintLayout>