<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/farmerHomepageFragment">
    <fragment
        android:id="@+id/farmerHomepageFragment"
        android:name="com.example.mobileassignment.ui.Homepage.FarmerHomepageFragment"
        android:label="FarmerHomepageFragment" />

    <fragment
        android:id="@+id/nav_productList"
        android:name="com.example.mobileassignment.ui.ProductList.ProductListFragment"
        android:label="@string/productList"
        tools:layout="@layout/fragment_productlist" />

    <fragment
        android:id="@+id/nav_requestList"
        android:name="com.example.mobileassignment.ui.CustomerRequestList.RequestListFragment"
        android:label="@string/requestList"
        tools:layout="@layout/fragment_requestlist" >
        <action
            android:id="@+id/action_nav_requestList_to_contractDetailFragment"
            app:destination="@id/contractDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/contractDetailFragment"
        android:name="com.example.mobileassignment.ui.FarmerFolder.ContractDetailFragment"
        android:label="ContractDetailFragment" />

    <fragment
        android:id="@+id/nav_customerOrderList"
        android:name="com.example.mobileassignment.ui.FarmerFolder.CustomerOrderListFragment"
        android:label="@string/requestList"
        tools:layout="@layout/fragment_customer_orderlist" />

    <activity
        android:id="@+id/nav_profile"
        android:name="com.example.mobileassignment.ui.Profile.ProfileActivity"
        android:label="@string/profile"
        tools:layout="@layout/activity_profile" />
</navigation>