<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <!--<fragment
        android:id="@+id/nav_Home"
        android:name="com.example.mobileassignment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mobileassignment.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobileassignment.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.example.mobileassignment.ui.Welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_nav_welcome_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_welcome_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mobileassignment.ui.UserManagement.LoginFragment"
        android:label="@string/loginLbl"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.mobileassignment.ui.UserManagement.RegisterFragment"
        android:label="@string/registerLbl"
        tools:layout="@layout/fragment_register" />

</navigation>